# yesod-angular

./: .travis.yml  LICENSE  README.md  yesod-angular.cabal
src/Yesod/: Angular.hs
