name:          yesod-angular
version:       0.1.0.1
synopsis:      Angular JS integratoin
description:
    Angular JS integration for Yesod.
    .
    This module is based on Michael Snoyman's original work
    in the <https://github.com/snoyberg/yesod-js> repository.

license:       BSD3
license-file:  LICENSE
author:        Christopher Reichert <creichert07@gmail.com>
maintainer:    Christopher Reichert <creichert07@gmail.com>
category:      Web
build-type:    Simple
cabal-version: >=1.10

library
  hs-source-dirs:   src
  exposed-modules:  Yesod.Angular
  default-language: Haskell2010
  build-depends:
      aeson            >= 0.6
    , base             == 4.*
    , containers       == 0.5.*
    , shakespeare      == 2.*
    , template-haskell
    , text             >= 0.11
    , transformers     >= 0.2
    , yesod            >= 1.2

source-repository head
    type:     git
    location: https://github.com/creichert/yesod-angular
